@@ -1,3 +1,9 @@
+2005-04-26  Miguel de Icaza  <miguel@novell.com>
+
+	* gtkdotnet/Graphics.cs: Contribution from Sebastian Faltoni
+	<sebastian.faltoni@gmail.com> that implements support for using
+	System.Drawing on Windows.
+
 2005-04-26  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/NodeStore.cs : implement IEnumerable.
